test/webgl/error/invalid_character2.true
#error warn about line continuation support
#version/*\
*/ 100

#define FOO

#if def/*\
*/ ined FOO  

#endif

void main() {

}
